--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "saxophone",
-  "description": "Fast and lightweight event-driven XML parser in pure JavaScript",
-  "version": "0.6.1",
+  "name": "async-saxophone",
+  "description": "Fast and lightweight asynchronous iterator XML parser in pure JavaScript",
+  "version": "0.1.0",
   "license": "MIT",
   "main": "lib/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/matteodelabre/saxophone.git"
-  },
   "scripts": {
     "lint": "eslint .",
     "tape": "tape 'lib/**/*.test.js'",
@@ -23,36 +19,32 @@
     ]
   },
   "engines": {
-    "node": "8 || 10 || 12 || 13"
+    "node": "10 || 12 || 13"
   },
   "keywords": [
     "xml",
     "parser",
-    "stream",
     "sax",
+    "asynchronous",
+    "async",
+    "iterator",
     "fast"
   ],
   "files": [
     "lib/**/*"
   ],
-  "author": {
-    "name": "Mattéo Delabre",
-    "email": "contact@matteodelabre.me",
-    "url": "https://github.com/matteodelabre"
-  },
   "devDependencies": {
     "benchmark": "^2.1.4",
     "common-tags": "^1.8.0",
-    "coveralls": "^3.0.8",
-    "eslint": "^6.7.0",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.7.0",
     "faucet": "0.0.1",
     "lodash.uniq": "^4.5.0",
-    "nyc": "^14.1.1",
+    "nyc": "^15.1.0",
     "tap-spec": "^5.0.0",
-    "tape": "^4.11.0"
+    "tape": "^4.13.3"
   },
   "dependencies": {
-    "readable-stream": "^3.4.0",
-    "string_decoder": "^1.3.0"
+    "saxophone": "^0.6.1"
   }
 }
