--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lodash.uniq": "^4.5.0",
     "nyc": "^15.1.0",
     "tap-spec": "^5.0.0",
-    "tape": "^4.13.3"
+    "tape-async": "^2.3.0"
   },
   "dependencies": {
     "saxophone": "^0.6.1"
