--- a/package.json
+++ b/package.json
@@ -44,7 +44,5 @@
     "tap-spec": "^5.0.0",
     "tape-async": "^2.3.0"
   },
-  "dependencies": {
-    "saxophone": "^0.6.1"
-  }
+  "dependencies": {}
 }
